updated page title
changed title to reflect content of website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Victoria H. Farr — Digital Designer</title>
       <link rel="icon" type="image/x-icon" href="img/vhf—d favicon.svg">
 
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
