Added VA line to interesting facts in header

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <ul class="interesting-facts-list">
               <li>💾 branding / digital designer</li>
               <li>❤️‍🔥 design bestie for change-makers</li>
+              <li>📍 virginia beach, VA</li>
               <li>🧘🏼‍♀️ meditation addict </li>
               <li>🧀 nacho enthusiast</li>
             </ul>
