--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
           <ul>
             <li><a href=""><img src="img/IG-icon-hover.svg"></a></li>
             <li><a href=""><img src="img/LI-icon.svg"></a></li>
+            <li><a href="https://github.com/Victoria-Farr"><img src="img/github-logo.svg"></a></li>
           </ul>
           <a href=""><img src="img/vhf—d logomark.svg" class="footer-img"/></a>
     
