link styling and projects list spacing fix

--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
 
       <!-- PROJECTS LIST SECTION-->
 
-    <section id="projects">
-      <ul class="projects-list">
-         <div class="red">
-          <li>1 — brand identity <em><span style="color:#ED0C16;"><a href="#project-one">very high frequency — design</span></em></a></li></div>
+    <section>
+      <ul class="projects-list" id="projects">
+        <li><p>*</p></li>
+        <div class="red">
+          <li>1 — brand identity <em><span style="color:#ED0C16;"><a href="#project-one">very high frequency — design</span></em></a>
+          </li>
+        </div>
 
         <div class="orange"><li>2 — packaging design <em><a href="#project-two"><span style="color: #D9730D;">the quiet part out loud</span></em></a></li></div>
         
@@ -190,7 +193,8 @@
         </section>
 
         <footer id="contact">
-          <h2><em>questions?</em><br><a href="mailto:victoriahfarr@gmail.com">victoriahfarr@gmail.com</a></h2>
+          <h2><em>questions?</em><br>
+            <div class="purple"><a href="mailto:victoriahfarr@gmail.com">victoriahfarr@gmail.com</a></h2></div>
           <ul>
             <li><a href=""><img src="img/IG-icon-hover.svg"></a></li>
             <li><a href=""><img src="img/LI-icon.svg"></a></li>
