--- a/work.html
+++ b/work.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiya! I'm Victoria.</title>
+    <title>Recent work.</title>
     <link rel="icon" type="image/x-icon" href="img/vhf—d-favicon.svg">
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
-
   <body>
     <nav>
       <ul>
@@ -26,19 +25,13 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <h1><span class="hero-text">Hiya! I'm</span>Victoria.</h1>
-            <p class="bestie">I'm a design bestie for <span class="red-text-subheading-header"><a href="about.html">change-makers</a>.</span></p>
-            <p>I help nonprofits and soul-driven entrepreneurs craft and communicate their value through beautiful, resonant, and strategic branding.</p><br>
-            <a href="" class="button">view work</a>
-          </div>
-          <div class="col-sm">
-            <img src="img/header-image.png" alt="image of victoria farr">
+            <h1><span class="hero-text">Recent</span>work.</h1>
           </div>
         </div>
       </div>
     </header>
-      
-    <!-- Projects -->
+
+<!-- Projects -->
 
     <!-- Project One -->
      <section class="project beige" id="work">
@@ -138,5 +131,6 @@
         </ul>
         <p>©️ 2025 Victoria Farr 🡒 <a href="colophon.html">COLOPHON</a></p>
      </footer>
+
   </body>
 </html>
