capitalized project one h2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="col-sm">
-            <h2>soul—first stationery</h2>
+            <h2>Soul—First Stationery</h2>
             <h3>Brand Development</h3>
             <p>Venture take root and flourish billions upon billions muse about citizens of distant epochs ship of the imagination. Corpus callosum inconspicuous motes of rock and gas another world star stuff harvesting star light as a patch of light network of wormholes.</p>
             <a href="" class="button">take a closer look</a>
