--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
           <div class="col-sm">
             <h2>Soul—First Stationery</h2>
             <h3>Brand Development</h3>
-            <p>Soul—First Stationery is a digital—first stationery brand offering minimalist, digital planners, notebooks, stickers, and Notion templates designed for mindful productivity and big soul—level questions. Each product is designed to combine aesthetic enjoyment with everyday practicality, creating a planning experience that feels more like a mindful ritual than a chore.</p>
-            <a href="" class="button">take a closer look</a>
+            <p>A digital—first stationery brand offering minimalist, digital planners, notebooks, stickers, and Notion templates designed for mindful productivity and big soul—level questions. Each product is designed to combine aesthetic enjoyment with everyday practicality, creating a planning experience that feels more like a mindful ritual than a chore.</p>
           </div>
         </div>
       </div>
