added button to project 1

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <h2>Soul—First Stationery</h2>
             <h3>Brand Development</h3>
             <p>A digital—first stationery brand offering minimalist, digital planners, notebooks, stickers, and Notion templates designed for mindful productivity and big soul—level questions.</p>
+            <a href="" class="button">take a closer look</a>
           </div>
         </div>
       </div>
