--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <li><a href="work.html">work</a></li>
         <li><a href="about.html">about</a></li>
         <li class="empty"></li>
-        <li><a href="#contact">contact</a></li>
-        <li><a href="https://www.instagram.com/victoriahfarr/" target="_blank">instagram</a></li>
-        <li><a href="https://www.linkedin.com/in/victoriahfarr/" target="_blank">linkedin</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope-heart"></i></a></li>
+        <li><a href="https://www.instagram.com/victoriahfarr/" target="_blank"><i class="bi bi-instagram"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/victoriahfarr/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
       </ul>
     </nav>
 
@@ -131,13 +131,28 @@
         <h1 class="footer-heading">any questions?<br></h1>
         <h1>
         <a href="mailto:victoriahfarr@gmail.com">send me a note.</a></h1>
+
+        <!--
         <ul>
           <li><a href="https://www.instagram.com/victoriahfarr/"><img src="img/IG-icon.svg" alt="instagram icon"></a></li>
           <li><a href="https://www.linkedin.com/in/victoriahfarr/"><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
           <li><a href=""><img src="img/github-icon.svg" alt="github icon"></a></li>
           <li><a href="https://www.figma.com/@victoriahfarr"><img src="img/figma-icon.svg" alt="figma icon"></a></li>
         </ul>
-        <p>©️ 2025 Victoria Farr 🡒 <a href="colophon.html">COLOPHON</a></p>
+      -->
+      
+      <ul>
+        <li><a href="https://www.instagram.com/victoriahfarr/"><i class="bi bi-instagram" style="font-size: 3rem;"></i></a></li>
+        
+        <li><a href="https://www.linkedin.com/in/victoriahfarr/"><i class="bi bi-linkedin" style="font-size: 3rem;"></i></a></li>
+
+        <li><a href="https://github.com/Victoria-Farr"><i class="bi bi-github" style="font-size: 3rem;"></i></a></li>
+
+        <li><a href="https://figma.com/@victoriahfarr"><i class="bi bi-bezier2" style="font-size: 3rem;"></i></a></li>
+      </ul>
+
+
+        <p><i class="bi bi-c-circle"></i> 2025 Victoria Farr <i class="bi bi-heart-arrow"></i></i> <a href="colophon.html">COLOPHON</a></p>
      </footer>
   </body>
 </html>
