swapped figma community icon to palette bootstrap icon

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
         <li><a href="https://github.com/Victoria-Farr"><i class="bi bi-github" style="font-size: 3rem;"></i></a></li>
 
-        <li><a href="https://figma.com/@victoriahfarr"><i class="bi bi-bezier2" style="font-size: 3rem;"></i></a></li>
+        <li><a href="https://www.figma.com/@victoriahfarr"><i class="bi bi-palette" style="font-size: 3rem;"></i></a></li>
+        </li>
       </ul>
 
 
