--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="work.html">work</a></li>
         <li><a href="about.html">about</a></li>
         <li class="empty"></li>
-        <li><a href="#contact"><i class="bi bi-envelope-heart"></i></a></li>
+        <li><a href="#contact"><i class="bi dbi-envelope-heart"></i></a></li>
         <li><a href="https://www.instagram.com/victoriahfarr/" target="_blank"><i class="bi bi-instagram"></i></a></li>
         <li><a href="https://www.linkedin.com/in/victoriahfarr/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
 
