--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
       </ul> -->
       <ul>
         
-        <li><a href="https://www.instagram.com/victoriahfarr/" target="_blank"><i class="bi bi-instagram"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/victoriahfarr/" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+        <li><a href="https://www.instagram.com/victoriahfarr/" target="_blank"><i class="bi bi-instagram" style="font-size: 2rem;"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/victoriahfarr/" target="_blank"><i class="bi bi-linkedin" style="font-size: 2rem;"></i></a></li>
 
-        <li><a href="https://github.com/Victoria-Farr"><i class="bi bi-github"></i></a></li>
+        <li><a href="https://github.com/Victoria-Farr"><i class="bi bi-github" style="font-size: 2rem;"></i></a></li>
 
-        <li><a href="https://www.figma.com/@victoriahfarr"><i class="bi bi-palette"></i></a></li>
+        <li><a href="https://www.figma.com/@victoriahfarr"><i class="bi bi-palette" style="font-size: 2rem;"></i></a></li>
       </ul>
 
         <p><i class="bi bi-c-circle"></i> 2025 <i class="bi bi-balloon-heart-fill" style="color: #E44031";></i> Victoria Farr <i class="bi bi-arrow-right-short"></i> <a href="colophon.html">COLOPHON</a></p>
